--- a/src/components/FriendList/friends.module.css
+++ b/src/components/FriendList/friends.module.css
@@ -1,5 +1,4 @@
-
-.friend-list {
+.friendList {
   list-style-type: none;
   display: flex;
   text-align: center;
@@ -7,7 +6,7 @@
   flex-direction: column;
   margin: auto;
   margin-top: 10px;
-  }
+}
 
 .itemFriends {
   display: flex;
@@ -20,15 +19,14 @@
   background-color: white;
   /*width: 200px;*/
   /*height: 120px;*/
-  }
-
+}
 
 .avatar {
   width: 120px;
   height: 120px;
   border: 1px solid white;
   border-radius: 10px;
-  }
+}
 
 .statusIsOnline {
   width: 20px;
@@ -37,7 +35,7 @@
   margin-right: 10px;
   background-color: green;
   margin: 0 50px;
-  }
+}
 
 .statusIsOffline {
   width: 20px;
@@ -46,12 +44,12 @@
   margin-right: 10px;
   background-color: red;
   margin: 0 50px;
-  }
+}
 
-.name{
+.name {
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
   color: grey;
   font-size: calc(10px + 1vmin);
   margin-left: 30px;
-  }
+}
