--- a/src/components/Transactions/transactions.module.css
+++ b/src/components/Transactions/transactions.module.css
@@ -1,31 +1,29 @@
-.transaction-history{
+.transactionHistory {
   text-align: center;
   border-collapse: collapse;
   border: 1px solid grey;
   margin: auto;
   margin-top: 10px;
-  }
-table{
+}
+table {
   width: 505px;
-  }
+}
 
-th{
+th {
   width: 33%;
-  }
+}
 
+thead {
+  background-color: #00bcd5;
+}
 
-thead{
-  background-color: #00BCD5;
-  }
-
-tr{
+tr {
   text-align: center;
-  }
+}
 
 tbody tr:nth-child(odd) {
   background-color: white;
-  }
+}
 tbody tr:nth-child(even) {
   background-color: whitesmoke;
-  }
-
+}
